# api_public.go
@@ -29,7 +29,7 @@ type PublicApiService service
 PublicApiService Current
 
  * @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
- * @param symbol The cryptocurrency symbol, default is btc.
+ * @param symbol The cryptocurrency symbol, provide &#x60;all&#x60; to get every symbol.
 
 @return PublicCurrentResponse
 */
@@ -126,24 +126,24 @@ func (a *PublicApiService) V1PublicCurrentSymbolGet(ctx context.Context, symbol 
 }
 
 /* 
-PublicApiService Price History
+PublicApiService Price Change
 
  * @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
- * @param symbol The cryptocurrency symbol, default is btc.
+ * @param symbol The cryptocurrency symbol.
 
-@return PublicPriceResponse
+@return PublicPriceChangeResponse
 */
-func (a *PublicApiService) V1PublicPriceHistorySymbolGet(ctx context.Context, symbol string) (PublicPriceResponse, *http.Response, error) {
+func (a *PublicApiService) V1PublicPriceChangeSymbolGet(ctx context.Context, symbol string) (PublicPriceChangeResponse, *http.Response, error) {
 	var (
 		localVarHttpMethod = strings.ToUpper("Get")
 		localVarPostBody   interface{}
 		localVarFileName   string
 		localVarFileBytes  []byte
-		localVarReturnValue PublicPriceResponse
+		localVarReturnValue PublicPriceChangeResponse
 	)
 
 	// create path and map variables
-	localVarPath := a.client.cfg.BasePath + "/v1/public/price-history/{symbol}"
+	localVarPath := a.client.cfg.BasePath + "/v1/public/price-change/{symbol}"
 	localVarPath = strings.Replace(localVarPath, "{"+"symbol"+"}", fmt.Sprintf("%v", symbol), -1)
 
 	localVarHeaderParams := make(map[string]string)
@@ -198,7 +198,111 @@ func (a *PublicApiService) V1PublicPriceHistorySymbolGet(ctx context.Context, sy
 		}
 		
 		if localVarHttpResponse.StatusCode == 200 {
-			var v PublicPriceResponse
+			var v PublicPriceChangeResponse
+			err = a.client.decode(&v, localVarBody, localVarHttpResponse.Header.Get("Content-Type"));
+				if err != nil {
+					newErr.error = err.Error()
+					return localVarReturnValue, localVarHttpResponse, newErr
+				}
+				newErr.model = v
+				return localVarReturnValue, localVarHttpResponse, newErr
+		}
+		
+		if localVarHttpResponse.StatusCode == 400 {
+			var v DefaultResponse
+			err = a.client.decode(&v, localVarBody, localVarHttpResponse.Header.Get("Content-Type"));
+				if err != nil {
+					newErr.error = err.Error()
+					return localVarReturnValue, localVarHttpResponse, newErr
+				}
+				newErr.model = v
+				return localVarReturnValue, localVarHttpResponse, newErr
+		}
+		
+		return localVarReturnValue, localVarHttpResponse, newErr
+	}
+
+	return localVarReturnValue, localVarHttpResponse, nil
+}
+
+/* 
+PublicApiService Price History
+
+ * @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
+ * @param symbol The cryptocurrency symbol, provide &#x60;all&#x60; to get every symbol.
+ * @param period The period to get data for, such as past 30 days.
+ * @param interval The bar interval, such as 1 day.
+
+@return PublicPriceHistoryResponse
+*/
+func (a *PublicApiService) V1PublicPriceHistorySymbolPeriodIntervalGet(ctx context.Context, symbol string, period string, interval string) (PublicPriceHistoryResponse, *http.Response, error) {
+	var (
+		localVarHttpMethod = strings.ToUpper("Get")
+		localVarPostBody   interface{}
+		localVarFileName   string
+		localVarFileBytes  []byte
+		localVarReturnValue PublicPriceHistoryResponse
+	)
+
+	// create path and map variables
+	localVarPath := a.client.cfg.BasePath + "/v1/public/price-history/{symbol}/{period}/{interval}"
+	localVarPath = strings.Replace(localVarPath, "{"+"symbol"+"}", fmt.Sprintf("%v", symbol), -1)
+	localVarPath = strings.Replace(localVarPath, "{"+"period"+"}", fmt.Sprintf("%v", period), -1)
+	localVarPath = strings.Replace(localVarPath, "{"+"interval"+"}", fmt.Sprintf("%v", interval), -1)
+
+	localVarHeaderParams := make(map[string]string)
+	localVarQueryParams := url.Values{}
+	localVarFormParams := url.Values{}
+
+	// to determine the Content-Type header
+	localVarHttpContentTypes := []string{}
+
+	// set Content-Type header
+	localVarHttpContentType := selectHeaderContentType(localVarHttpContentTypes)
+	if localVarHttpContentType != "" {
+		localVarHeaderParams["Content-Type"] = localVarHttpContentType
+	}
+
+	// to determine the Accept header
+	localVarHttpHeaderAccepts := []string{"application/json"}
+
+	// set Accept header
+	localVarHttpHeaderAccept := selectHeaderAccept(localVarHttpHeaderAccepts)
+	if localVarHttpHeaderAccept != "" {
+		localVarHeaderParams["Accept"] = localVarHttpHeaderAccept
+	}
+	r, err := a.client.prepareRequest(ctx, localVarPath, localVarHttpMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, localVarFileName, localVarFileBytes)
+	if err != nil {
+		return localVarReturnValue, nil, err
+	}
+
+	localVarHttpResponse, err := a.client.callAPI(r)
+	if err != nil || localVarHttpResponse == nil {
+		return localVarReturnValue, localVarHttpResponse, err
+	}
+
+	localVarBody, err := ioutil.ReadAll(localVarHttpResponse.Body)
+	localVarHttpResponse.Body.Close()
+	if err != nil {
+		return localVarReturnValue, localVarHttpResponse, err
+	}
+
+	if localVarHttpResponse.StatusCode < 300 {
+		// If we succeed, return the data, otherwise pass on to decode error.
+		err = a.client.decode(&localVarReturnValue, localVarBody, localVarHttpResponse.Header.Get("Content-Type"));
+		if err == nil { 
+			return localVarReturnValue, localVarHttpResponse, err
+		}
+	}
+
+	if localVarHttpResponse.StatusCode >= 300 {
+		newErr := GenericSwaggerError{
+			body: localVarBody,
+			error: localVarHttpResponse.Status,
+		}
+		
+		if localVarHttpResponse.StatusCode == 200 {
+			var v PublicPriceHistoryResponse
 			err = a.client.decode(&v, localVarBody, localVarHttpResponse.Header.Get("Content-Type"));
 				if err != nil {
 					newErr.error = err.Error()
@@ -316,7 +420,7 @@ func (a *PublicApiService) V1PublicSymbolsGet(ctx context.Context) (PublicSymbol
 PublicApiService Trend
 
  * @param ctx context.Context - for authentication, logging, cancellation, deadlines, tracing, etc. Passed from http.Request or context.Background().
- * @param symbol The cryptocurrency symbol, default is btc.
+ * @param symbol The cryptocurrency symbol.
 
 @return PublicTrendResponse
 */
