# model_public_current_response_data_current.go
@@ -9,6 +9,10 @@
 
 package swagger
 
-type PublicCurrentResponseData struct {
-	Current []PublicCurrentResponseDataCurrent `json:"current"`
+type PublicCurrentResponseDataCurrent struct {
+	Symbol string `json:"symbol"`
+	Name string `json:"name"`
+	Price float32 `json:"price"`
+	ChangeUsd float32 `json:"change_usd"`
+	ChangePct float32 `json:"change_pct"`
 }
