# model_public_price_change_response_data.go
@@ -9,7 +9,6 @@
 
 package swagger
 
-type PublicPriceResponseData struct {
-	Name string `json:"name"`
-	History []PublicPriceResponseDataHistory `json:"history"`
+type PublicPriceChangeResponseData struct {
+	PriceChange []PublicPriceChangeResponseDataPriceChange `json:"price_change"`
 }
