# model_public_price_history_response_data_price_history.go
@@ -9,6 +9,8 @@
 
 package swagger
 
-type PublicCurrentResponseData struct {
-	Current []PublicCurrentResponseDataCurrent `json:"current"`
+type PublicPriceHistoryResponseDataPriceHistory struct {
+	Symbol string `json:"symbol"`
+	Name string `json:"name"`
+	History []PublicPriceHistoryResponseDataHistory `json:"history"`
 }
